--- a/backend/templates/premium.html
+++ b/backend/templates/premium.html
@@ -31,7 +31,7 @@
                     </li>
                     <li class="flex items-center gap-3 text-white/60">
                         <i class="fas fa-check text-success"></i>
-                        <span>Máximo 12 equipos por liga</span>
+                        <span>Máximo 10 equipos por liga</span>
                     </li>
                     <li class="flex items-center gap-3 text-white/60">
                         <i class="fas fa-check text-success"></i>
@@ -43,7 +43,7 @@
                     </li>
                     <li class="flex items-center gap-3 text-white/40">
                         <i class="fas fa-times text-red-400"></i>
-                        <span>Editar jugadores</span>
+                        <span>Generación de credenciales</span>
                     </li>
                 </ul>
                 <div class="text-center">
@@ -80,7 +80,7 @@
                     </li>
                     <li class="flex items-center gap-3">
                         <i class="fas fa-check text-success"></i>
-                        <span>Editar jugadores</span>
+                        <span>Generación de credenciales</span>
                     </li>
                     <li class="flex items-center gap-3">
                         <i class="fas fa-check text-success"></i>
